OO-3835: add vitero to CSP, cache proxies, link to groups
Add the vitero domain to the frame CSP, cache the SOAP proxies (because
of Apache CXF), add a link in the file browser to open it in a new
window